--- a/src/resource/views/admin.hbs
+++ b/src/resource/views/admin.hbs
@@ -112,7 +112,7 @@
                 <a href="/admin/phan-hoi" class="button-75" role="button"><span class="text">Quản lý phản hồi</span></a>
                 <a href="/admin/quan-ly-khuyen-mai" class="button-75" role="button"><span class="text">Quản lý khuyến mãi</span></a>
                 <a href="/admin/quan-ly-combo" class="button-75" role="button"><span class="text">Quản lý combo</span></a>
-                <a class="button-75" role="button"><span class="text">Quản lý hóa đơn</span></a>
+                <a href="/admin/quan-ly-hoa-don" class="button-75" role="button"><span class="text">Quản lý hóa đơn</span></a>
                 <a href="/admin/suat-chieu" class="button-75" role="button"><span class="text">Quản lý suất chiếu</span></a>
             </div>
         </div>
